@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-11-29T16:29:28Z",
+  "timestamp" : "2022-11-30T08:26:12Z",
   "count_outdated" : 634,
   "uniques_outdated" : 401,
-  "count" : 657,
+  "count" : 656,
   "uniques" : 414,
   "clones" : [
     {
       "timestamp": "2022-11-16T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
