@@ -1,3 +1,11 @@
+2022-11-30T08:26:12Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3581557732 # 660
+* notice: last 14d: unq all: 3 22
+* notice: prev accum: outdated-unq outdated-all / unq all: 401 634 / 414 657
+* notice: next accum: outdated-unq outdated-all / unq all: 401 634 / 414 656
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
+* notice: removed / changed dates: [] / [2022-11-16]
+
 2022-11-29T16:29:28Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3576047214 # 658
 * notice: last 14d: unq all: 3 23
